<resources>
  <string name="app_name">DaggerInitials</string>
  <string name="login_image_not_available">Not available</string>
  <string name="hint_username">Username</string>
  <string name="hint_password">Password</string>
  <string name="login">Login</string>
  <string name="invade">Invade</string>
  <string name="logout">logout</string>
  <string name="nav_profile">Profile</string>
  <string name="nav_posts">Posts</string>
</resources>
