<?xml version="1.0" encoding="utf-8"?>

<layout>
  <data>
    <variable name="loginViewModel" type="com.stunnningcoder.daggerinitials.login.LoginViewModel"/>
  </data>
  <ScrollView
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
  >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content"
        tools:context=".login.LoginActivity">

      <ImageView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="56dp"
                 android:id="@+id/ivLogin"
                 android:contentDescription="@string/login_image_not_available"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="24sp"
          android:padding="12dp"
          android:id="@+id/tvLogin"
          android:text="@string/login"
          app:layout_constraintTop_toBottomOf="@id/ivLogin"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"/>

      <ProgressBar android:layout_width="wrap_content" android:id="@+id/progress"
                   android:layout_height="wrap_content"
                   android:visibility="gone"
                   app:layout_constraintTop_toBottomOf="@id/ivLogin"
                   app:layout_constraintLeft_toRightOf="@id/tvLogin"
                   android:padding="2dp"


      />

      <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                               android:id="@+id/tvUsername"
                                                               android:layout_height="wrap_content"
                                                               app:layout_constraintLeft_toLeftOf="parent"
                                                               android:hint="@string/hint_username"
                                                               android:text="@={loginViewModel.userIdLiveData}"
                                                               android:singleLine="true"
                                                               app:layout_constraintRight_toRightOf="parent"
                                                               android:imeOptions="actionNext"
                                                               app:layout_constraintTop_toBottomOf="@id/tvLogin"
                                                               android:padding="8dp"
      />
      <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                               android:layout_height="wrap_content"
                                                               app:layout_constraintLeft_toLeftOf="parent"
                                                               android:hint="@string/hint_password"
                                                               android:singleLine="true"
                                                               android:id="@+id/tvPassword"
                                                               app:layout_constraintRight_toRightOf="parent"
                                                               android:imeOptions="actionDone"
                                                               android:padding="8dp"
                                                               app:layout_constraintTop_toBottomOf="@id/tvUsername"
      />

      <Button android:layout_width="match_parent" android:layout_height="wrap_content"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:padding="8dp"
              android:onClick="@{()-> loginViewModel.authenticateUser(loginViewModel.userIdLiveData)}"
              app:layout_constraintTop_toBottomOf="@id/tvPassword"
              android:text="@string/invade"
      />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</layout>